# singapore-smb

./: .dockerignore  .env.docker  .gitignore  AGENT.md  CLAUDE.md  Comprehensive_PRD_Comparative_Analysis.md  Comprehensive_Review_and_Validation_Plan.md  Dockerfile  PROJECT_DEEP_UNDERSTANDING.md  PROJECT_UNDERSTANDING.md  Phase1_remediation_plan_audit_log.md  Phase1_sub-plan.md  Phase2_completion_log.md  Phase2_sub-plan.md  Phase3_completion_log.md  Phase3_sub-plan.md  Phase4_completion_log.md  Phase4_sub-plan.md  Phase5_completion_log.md  Phase5_sub-plan.md  Phase5_testing_completion_log.md  Phase5_testing_plan.md  Phase6_completion_log.md  Phase6_sub-plan.md  Phase6_sub-plan_v2.md  Phase7_completion_log.md  Phase7_sub-plan.md  Phase7_sub-plan_v2.md  Project Architecture Document.md  QA_Audit_Review_Database_Schema_1.md  QA_Audit_Review_Database_Schema_2.md  QA_Audit_Review_Project_Planning_1.md  QA_Audit_Review_Project_Planning_2.md  README.md  README_v1.md  Updated_Review_Project_Planning_Docs.md  VALIDATED_PROJECT_UNDERSTANDING.md  VALIDATED_PROJECT_UNDERSTANDING_v2.md  VALIDATED_PROJECT_UNDERSTANDING_v3.md  docker-compose.yml  (+19 more)
backend/: .env.example  README.md  conftest.py  pyproject.toml  pytest.ini
backend/apps/: __init__.py
backend/apps/accounting/: __init__.py  admin.py  apps.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/accounting/gst/: __init__.py  engine.py  rates.py
backend/apps/accounts/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/commerce/: __init__.py  admin.py  apps.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/compliance/: __init__.py  admin.py  apps.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/integrations/: apps.py  serializers.py  urls.py  views.py
backend/apps/inventory/: __init__.py  admin.py  apps.py  locks.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/invoicenow/: __init__.py  admin.py  apps.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/payments/: apps.py  exceptions.py  serializers.py  tasks.py  urls.py  views.py  webhooks.py
backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py
backend/core/: __init__.py  exceptions.py  middleware.py  models.py  permissions.py
(+238 files in other folders)
